remove to correctly align menu items to center

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -166,12 +166,6 @@
     gap: 16px;
   }
 
-  @media (width >= 1024px) {
-    .header-end {
-      align-items: baseline;
-    }
-  }
-
   .hamburger-menu {
     align-items: center;
     background-color: transparent;
